3.Semantic.Analysis/test/semanal/error/error4_1_2_4.mod
module re_dec;
var a,a : integer;

begin

end re_dec;
